# mylittleserver

./: flake.nix  replace-vars-files.nix
basic/: default.nix  init.sql  mailuser.sh
dav/: default.nix
db-auth/: default.nix
db-auth/db-auth/: db_auth.py  default.nix  pyproject.toml
db-auth/db-auth/db_auth/: __main__.py  auth.py  auth_asyncpg.py  auth_base.py  auth_psycopg2.py  change_password.html  matrix.py
mail/: autoconfig.xml  default.nix  init.sql
mail/dovecot/: dovecot-sql.conf.ext  dovecot.conf
mail/dovecot/sieve-before.d/: deduplicate.sieve  spam-move.sieve
mail/dovecot/sieve-system/: report-ham.sieve  report-spam.sieve
mail/postfix/: alias_maps.cf  header_checks.cf  login_maps.cf  main.cf  master.cf  recipient_access.cf  recipient_maps.cf  restrict_admin.cf  sender_access.cf
mail/rspamd/: classifier-bayes.conf  dkim_signing.conf  greylist.conf  milter_headers.conf  neural.conf  neural_group.conf  redis.conf  replies.conf
matrix/: default.nix  init.sql
pam/: default.nix  nginx-pam-init.sql  pam_pgsql.conf  pam_pgsql.nix
turn/: default.nix
xmpp/: default.nix  init.sql  prosody.cfg.lua
xmpp/conversejs/: index.html
xmpp/db-auth/: db_auth.py  default.nix  pyproject.toml  shell.nix
