[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "db_auth"
version = "1.0"
description = "Web server for authorization via MyLittleServer users table"
authors = [
    {name = "Nikolay Amiantov", email = "ab@fmap.me"},
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "asyncpg>=0.29.0",
    "libpass>=1.9.2",
    "bcrypt>=4.3.0",
]

[project.scripts]
db_auth = "db_auth:main"
